--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <link href='http://fonts.googleapis.com/css?family=Anaheim' rel='stylesheet' type='text/css'>
 <div id="container">
 <!--     <div id="message">Please allow your camera.</div> -->
-    <canvas id='c'></canvas>
+    <canvas id="canvas"></canvas>
 </div>
 
 <script type="text/javascript" src="http://jsdo.it/akm2/dat-gui/js"></script>
